--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-native-masked-text",
-    "version": "1.13.0",
+    "version": "1.14.0",
     "description": "Text and TextInput with mask for React Native applications",
     "licenses": [
         {
@@ -13,7 +13,7 @@
         "clean": "rimraf dist",
         "test": "jest",
         "build": "babel ./rnmt.js ./lib/*.js ./lib/**/*.js -d ./dist",
-        "prepublish": "npm test && npm run clean && npm run build",
+        "prepublish": "yarn clean && yarn build",
         "start": "node node_modules/react-native/local-cli/cli.js start",
         "ios": "react-native run-ios"
     },
